--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
-<head>
-	<title></title>
-</head>
-<body>
-	Ola
-</body>
+    <head>
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+        <script type="text/javascript" src="./js/ajax.js"></script>
+    </head>
+    <body>
+        <input type="text" id="nome" placeholder="nome" required/>
+        <input type="text" id="sobrenome" placeholder="sobrenome" required/>
+        <input type="text" id="idade" placeholder="idade" required/>
+        <button id="button">Gravar</button>
+        <button id="button2">Mostrar</button>
+    </body>
 </html>
