Criacao do botao BSI

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
         <input type="text" id="idade" placeholder="idade" required/>
         <button id="button">Gravar</button>
         <button id="button2">Mostrar</button>
+
+
+
+        <button id="bBSI">BSI</button>
     </body>
 </html>
